# SimpleCPP-ExampleProject

./: .gitignore  .gitmodules  CMakeLists.txt  setup.ps1  setup.sh
src/: Main.cpp
